--- a/pangen.cabal
+++ b/pangen.cabal
@@ -5,7 +5,7 @@ license-file:   LICENSE
 author:         dan corson <danl@alum.mit.edu>
 synopsis:       generate random haskell functions
 build-type:     Simple
-build-depends:  MonadRandom, base, containers, mtl, FUtil, HUnit
+build-depends:  FUtil, HUnit, MonadRandom, base, containers, mtl
 
 executable:     pangen
 main-is:        Main.hs
